--- a/gui/camera-system.html
+++ b/gui/camera-system.html
@@ -5,6 +5,8 @@
 
   <script src="linkers/car-detection-linker.js"></script>
 
+
+
   <script>
     function updateInputFileLabel() {
       console.log(inputFile.value)
@@ -19,40 +21,96 @@
 
 
 
+  <script>
 
+    setInterval(function () {
+      document.getElementById("progressBarProcessing").setAttribute("aria-valuenow", "20")
+      document.getElementById("progressBarProcessing").setAttribute("style", "width: 20%;")
+      document.getElementById("progressBarProcessing").textContent = "20% Complete"
+
+
+    }, 500)
+
+  </script>
+
+
+<style>
+  div.row {
+    padding: 5px;
+  }
+  div.jumbotron{
+    padding: 5px;
+  }
+</style>
 
 </head>
-<script>
 
-</script>
+
 
 <body>
-  <br>
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Object detection</h1>
-      <h2>Powered by Python</h2>
-      <p>Rendered by HTML and JavaScript</p>
-    </div>
-    <br>
 
-    <br>
-
-
-    <div class="input-group">
-      <div class="custom-file">
-        <input type="file" class="custom-file-input" id="inputFile">
-        <label class="custom-file-label" for="inputFile">Choose file</label>
-      </div>
-      <div class="input-group-append">
-        <button onclick="get_video()" class="btn btn-outline-secondary" type="button">Button</button>
-      </div>
-    </div>
-
-
-
-    <br>
+  <div class="jumbotron">
+    <h1 class="display-4">Speed regulation system</h1>
+    <p class="lead">Using image processing, deep learning and math.</p>
+    <p class="lead">Powered by Python and Electron.js</p>
+    <span class="badge badge-pill badge-primary">Car detection</span>
+    <span class="badge badge-pill badge-secondary">License plate recognition</span>
+    <span class="badge badge-pill badge-success">Speed calculation</span>
   </div>
+
+  <div id="firstRow" class="row">
+
+    <!-- <div class="col-md-1" id="services_block">
+
+    </div> -->
+
+    <div class="col-md-3">
+      <div class="input-group">
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" id="inputFile" onChange="loadTheVid()">
+          <label class="custom-file-label" for="inputFile">Choose file</label>
+        </div>
+        <div class="input-group-append">
+          <button id="uploadBtn" onclick="get_video()" class="btn btn-outline-secondary" type="button">Start</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+
+      <div class="progress" style="height: 38px;">
+        <div id="progressBarProcessing" class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+          role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">25% Complete
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
+
+
+
+  </div>
+
+
+  <div class="row">
+    <!-- <div class="col-md-1" id="services_block">
+
+    </div> -->
+    <div class="col-md-6">
+      <video id="video" width="720" height="480" controls="controls">
+        <source id="videoFrame" src="">
+      </video>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
 
 
 
