--- a/gui/camera-system.html
+++ b/gui/camera-system.html
@@ -1,7 +1,7 @@
 <head>
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 
   <script src="linkers/car-detection-linker.js"></script>
 
@@ -14,14 +14,12 @@
       reader.readAsText(input)
 
     }
-
-
-
   </script>
 
 
 
-  <script>
+
+  <!-- <script>
 
     setInterval(function () {
       document.getElementById("progressBarProcessing").setAttribute("aria-valuenow", "20")
@@ -31,17 +29,94 @@
 
     }, 500)
 
-  </script>
+  </script> -->
 
 
-<style>
-  div.row {
-    padding: 5px;
-  }
-  div.jumbotron{
-    padding: 5px;
-  }
-</style>
+  <style>
+    div.row {
+      padding: 5px;
+    }
+
+    div.jumbotron {
+      padding: 15px;
+      margin-bottom: 10px;
+    }
+
+    h1.display-4 {
+      margin-left: 15px;
+    }
+
+    p.lead {
+      margin-left: 15px;
+    }
+
+    span.badge {
+      margin-left: 15px;
+    }
+
+    div.input-group {
+      margin-left: 15px;
+      margin-bottom: 0px;
+      color: 19180A;
+    }
+
+    div.progress {
+      margin-bottom: 0px;
+      margin-right: 11px;
+    }
+
+    div.col-md-3 {
+      margin-bottom: 0px;
+    }
+
+    h1 {
+      margin-bottom: 0px;
+      margin-left: 15px;
+      color: 19180A;
+    }
+
+    video {
+      margin-bottom: 0px;
+      margin-top: 0px;
+      margin-left: 15px;
+      width: 100%;
+      height: auto;
+    }
+
+    div.card {
+      margin-top: 0px;
+      margin-left: 5px;
+    }
+
+    div.alert {
+      margin-left: 20px;
+      margin-right: 15px;
+      background-color: 1A8FE3;
+      color: 19180A;
+    }
+
+    span.badge-success {
+      background-color: C3423F;
+    }
+
+    span.badge-secondary {
+      background-color: FE9000;
+    }
+
+    span.badge-danger {
+      background-color: 19180A;
+    }
+
+    span.badge-primary {
+      background-color: 96F550;
+      color: 19180A;
+    }
+
+    div.progress-bar {
+      background-color: 96F550;
+      color: 19180A;
+    }
+  </style>
 
 </head>
 
@@ -50,19 +125,24 @@
 <body>
 
   <div class="jumbotron">
-    <h1 class="display-4">Speed regulation system</h1>
-    <p class="lead">Using image processing, deep learning and math.</p>
-    <p class="lead">Powered by Python and Electron.js</p>
-    <span class="badge badge-pill badge-primary">Car detection</span>
-    <span class="badge badge-pill badge-secondary">License plate recognition</span>
-    <span class="badge badge-pill badge-success">Speed calculation</span>
+    <div class="row">
+
+      <div class="col-md-6">
+        <h1 class="display-4">Speed regulation system</h1>
+        <p class="lead">Using image processing, deep learning and math.</p>
+        <p class="lead">Powered by Python and Electron.js</p>
+        <span class="badge badge-pill badge-primary">Car detection</span>
+        <span class="badge badge-pill badge-secondary">License plate recognition</span>
+        <span class="badge badge-danger">Vehicle tracking</span>
+        <span class="badge badge-pill badge-success">Speed calculation</span>
+      </div>
+      <div class="col-md-6">
+        <img style="width:45%" src="images/app-logo.png" />
+      </div>
+    </div>
   </div>
 
   <div id="firstRow" class="row">
-
-    <!-- <div class="col-md-1" id="services_block">
-
-    </div> -->
 
     <div class="col-md-3">
       <div class="input-group">
@@ -71,16 +151,16 @@
           <label class="custom-file-label" for="inputFile">Choose file</label>
         </div>
         <div class="input-group-append">
-          <button id="uploadBtn" onclick="get_video()" class="btn btn-outline-secondary" type="button">Start</button>
+          <button id="uploadBtn" onclick="get_video()" class="btn btn-outline-secondary" type="button" disabled>Start</button>
         </div>
       </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-9">
 
       <div class="progress" style="height: 38px;">
-        <div id="progressBarProcessing" class="progress-bar progress-bar-striped progress-bar-animated bg-success"
-          role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">25% Complete
+        <div id="progressBarProcessing" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0"
+          aria-valuemin="0" aria-valuemax="100">
         </div>
       </div>
     </div>
@@ -89,30 +169,68 @@
     <br>
 
 
+
+  </div>
+
+  <div id="info-user" class="alert alert-primary" role="alert">
+    This is where the informations about the processing status of your video are shown.
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-6">
+      <h1>Footage</h1>
+    </div>
+    <div class="col-md-6">
+      <h1>Results</h1>
+    </div>
 
   </div>
 
 
   <div class="row">
-    <!-- <div class="col-md-1" id="services_block">
 
-    </div> -->
     <div class="col-md-6">
-      <video id="video" width="720" height="480" controls="controls">
+      <video id="video" width="720" controls="controls">
         <source id="videoFrame" src="">
       </video>
     </div>
+
+    <div class="col-md-6">
+      <div id="list-of-results" class="card-columns">
+
+        <!-- Here we add results as images with text
+          
+        <div class="card">
+          <img src="/home/ossi/Documents/licenta/graphical-user-interface/gui-app-lpr/engine/exported/resulted_image_with_LPR0.png" class="card-img-top" alt="Car image">
+          <div class="card-body">
+            <h5 class="card-title">Card title that wraps to a new line</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div> -->
+
+
+      </div>
+
+    </div>
+
+
   </div>
 
 
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script>
+    window.jQuery = window.$ = require('jquery');
+    $(function () {
+      $('[data-toggle="popover"]').popover()
+    })
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
-
-
-
-
-
-
-
-
-
-  <body>
+</body>
