Fixed static paths

--- a/gui/camera-system.html
+++ b/gui/camera-system.html
@@ -1,4 +1,8 @@
+<html>
+
 <head>
+
+  <title>SpeedCam</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -102,6 +106,9 @@
       color: 19180A;
     }
 
+    body {
+      overflow: hidden;
+    }
   </style>
 
 </head>
@@ -184,7 +191,7 @@
 
     <div class="col-md-6">
       <video id="video" width="720" controls="controls">
-        <source id="videoFrame" src="" >
+        <source id="videoFrame" src="">
       </video>
     </div>
 
@@ -226,3 +233,6 @@
     crossorigin="anonymous"></script>
 
 </body>
+
+
+</html>
