new tests and improved interface

--- a/gui/camera-system.html
+++ b/gui/camera-system.html
@@ -106,9 +106,9 @@
       color: 19180A;
     }
 
-    body {
+    /* body {
       overflow: hidden;
-    }
+    } */
   </style>
 
 </head>
@@ -190,10 +190,13 @@
   <div class="row">
 
     <div class="col-md-6">
-      <video id="video" width="720" controls="controls">
+      <video id="video" width="720" height="320" controls="controls">
         <source id="videoFrame" src="">
+          Your browser does not support the video tag.
       </video>
     </div>
+
+
 
     <div class="col-md-6">
       <div id="list-of-results" class="card-columns">
